--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escudo de Armas Familia Asprón</title>
+    <title>Comienzo de la Familia Asprón en México</title>
     <style>
         body {
             font-family: Arial, sans-serif;
