--- a/matrimonio.html
+++ b/matrimonio.html
@@ -37,7 +37,25 @@
         }
 
         .imagen-matrimonio.zoom {
-            transform: scale(1.5); /* Zoom de 1.5x */
+            transform: scale(2.0); /* Zoom de 1.5x */
+        }
+
+        .boton-regresar {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: #ffffff;
+            background-color: #2c3e50;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .boton-regresar:hover {
+            background-color: #1a2a3a; /* Cambia el color al pasar el mouse */
         }
 
         footer {
@@ -53,7 +71,10 @@
     <h1>REGISTRO DE MATRIMONIO ENTRE <strong>ANTONIO ASPRON PILAR</strong> Y <strong>EMILIA PEREZ CAMPOS</strong> EL <span class="fecha-roja">17 DE MAYO DE 1927</span> EN ACATLÁN DE PÉREZ FIGUEROA, OAXACA</h1>
 
     <!-- Imagen centrada con marco bonito y zoom -->
-    <img class="imagen-matrimonio" src="https://i.imgur.com/TZMpCQF.jpeg" alt="Registro de Matrimonio" onclick="toggleZoom(this)">
+    <img class="imagen-matrimonio" src="https://i.imgur.com/matrimonio.jpg" alt="Registro de Matrimonio" onclick="toggleZoom(this)">
+
+    <!-- Botón REGRESAR -->
+    <a href="pagina-principal.html" class="boton-regresar">REGRESAR</a>
 
     <!-- Crédito -->
     <footer>
