--- a/matrimonio.html
+++ b/matrimonio.html
@@ -71,7 +71,7 @@
     <h1>REGISTRO DE MATRIMONIO ENTRE <strong>ANTONIO ASPRON PILAR</strong> Y <strong>EMILIA PEREZ CAMPOS</strong> EL <span class="fecha-roja">17 DE MAYO DE 1927</span> EN ACATLÁN DE PÉREZ FIGUEROA, OAXACA</h1>
 
     <!-- Imagen centrada con marco bonito y zoom -->
-    <img class="imagen-matrimonio" src="https://i.imgur.com/matrimonio.jpg" alt="Registro de Matrimonio" onclick="toggleZoom(this)">
+    <img class="imagen-matrimonio" src="https://i.imgur.com/TZMpCQF.jpeg" alt="Registro de Matrimonio" onclick="toggleZoom(this)">
 
     <!-- Botón REGRESAR -->
     <a href="pagina-principal.html" class="boton-regresar">REGRESAR</a>
