--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -78,7 +78,7 @@
         <a href="#">HOME</a>
         <a href="#">BLASÓN ASPRÓN</a>
         <a href="https://www.guiaturisticamexico.com/municipio.php?id_e=20&id_Municipio=01167">HISTORIA DE ACATLÁN</a>
-	<a href="arbol.html">ÁRBOL</a>
+	<a href="arbol1.html">ÁRBOL</a>
     </div>
 
     <h1>HISTORIA FAMILIA ASPRÓN EN MÉXICO</h1>
