--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -76,7 +76,7 @@
     <div class="menu">
         <a href="index.html">INTRO</a>
         <a href="#">HOME</a>
-        <a href="#">BLASÓN ASPRÓN</a>
+        <a href="blason.html">BLASÓN ASPRÓN</a>
         <a href="https://www.guiaturisticamexico.com/municipio.php?id_e=20&id_Municipio=01167">HISTORIA DE ACATLÁN</a>
 	<a href="arbol1.html">ÁRBOL</a>
     </div>
@@ -100,7 +100,7 @@
             En los verdes valles de <strong>Asturias</strong>, donde las montañas besan el cielo y el mar Cantábrico susurra historias de antiguos linajes, nació en 1870 don <strong>Antonio Asprón Pilar</strong>, hijo de <strong>Manuel Asprón Rubio</strong> y <strong>Francisca Pilar</strong>, ambos españoles de pura cepa. La familia <strong>Asprón</strong>, cuyas raíces se hunden en la tierra asturiana, era conocida por su fortaleza y dedicación al trabajo, valores que forjaron el carácter de <strong>Antonio</strong> desde su más tierna infancia.
         </p>
         <p>
-            <strong>Asturias</strong>, cuna de héroes y leyendas, fue testigo de los primeros años de <strong>Antonio</strong>, quien creció bajo el influjo de una tierra que inspiraba esfuerzo y perseverancia. Sin embargo, el destino tenía otros planes para él. A finales del siglo XIX, <strong>España</strong> comenzó a liberalizar los requisitos burocráticos para emigrar, lo que desencadenó una ola migratoria hacia <strong>América</strong>. Muchos asturianos, gallegos y españoles de otras regiones partieron hacia tierras lejanas en busca de nuevas oportunidades. Entre ellos, tres hombres asturianos, originarios de <strong>Oviedo</strong>, embarcaron en el vapor <strong>Alfonso XII</strong> con rumbo al Nuevo Mundo.
+            <strong>Asturias</strong>, cuna de héroes y leyendas, fue testigo de los primeros años de <strong>Antonio</strong>, quien creció bajo el influjo de una tierra que inspiraba esfuerzo y perseverancia. Sin embargo, el destino tenía otros planes para él. A finales del siglo XIX, <strong>España</strong> comenzó a liberalizar los requisitos burocráticos para emigrar, lo que desencadenó una ola migratoria hacia <strong>América</strong>. Muchos asturianos, gallegos y españoles de otras regiones partieron hacia tierras lejanas en busca de nuevas oportunidades. Entre ellos, tres hombres asturianos Antonio Asprón Pilar, Valentin Asprón y Ramón Arobes Asprón originarios de <strong>Oviedo</strong>, embarcaron en el vapor <strong>Alfonso XII</strong> con rumbo al Nuevo Mundo. <a href="http://pares.mecd.es/MovimientosMigratorios/buscadorAvanzado.form" style="color: #2c3e50; text-decoration: underline;">VER REGISTRO DE MATRIMONIO</a>
         </p>
         <p>
             El 19 de septiembre de 1903, el barco atracó en el puerto de <strong>Veracruz</strong>, <strong>México</strong>. Entre los pasajeros se encontraba <strong>Antonio Asprón Pilar</strong>, un hombre de 33 años, fuerte de espíritu y decidido a labrar un futuro próspero. Con la mirada puesta en el horizonte y el corazón lleno de esperanza, <strong>Antonio</strong> se adentró en tierras mexicanas, donde el sol brilla con fuerza y la tierra es fértil.
