--- a/blason.html
+++ b/blason.html
@@ -96,7 +96,7 @@
 <body>
 
     <!-- Encabezado -->
-    <h1><strong>BLASÓN Y ESCUDO DE ARMAS DE LA "FAMILIA ASPRON"</strong></h1>
+    <h1><strong>BLASÓN Y ESCUDO DE ARMAS DE LA "FAMILIA ASPRÓN"</strong></h1>
 
     <!-- Dos imágenes al inicio -->
     <div class="imagenes-inicio">
@@ -172,6 +172,7 @@
     <!-- Botón REGRESAR -->
     <a href="pagina-principal.html" class="boton-regresar">REGRESAR</a>
     <a href="pasajeros.pdf" class="boton-regresar">LISTA PASAJEROS ALFONSO XII</a>
+    <a href="otroescudo.html" class="boton-regresar">OTROS ESCUDOS</a>
     <!-- Crédito -->
     <footer>
         Creado por Antonio Asprón Vera
