--- a/arbol1.html
+++ b/arbol1.html
@@ -91,8 +91,9 @@
     <!-- Enlaces sobre los nombres -->
     <p>
         <a class="nombre-link" href="https://i.imgur.com/Ql22QdA.png" target="_blank">VER FOTO EMILIA</a>
-        y
+        
         <a class="nombre-link" href="https://i.imgur.com/GrWNNQn.jpeg" target="_blank">VER FOTO ANTONIO</a>
+        <a class="nombre-link" href="masfotos.html" target="_blank">MAS FOTOS...</a>
     </p>
 
     <!-- Crédito -->
