--- a/masfotos.html
+++ b/masfotos.html
@@ -83,9 +83,10 @@
 
     <!-- Contenedor para las imágenes y descripciones -->
     <div class="imagen-contenedor">
-        <img src="https://i.imgur.com/imagen1.jpg" alt="Imagen 1" onclick="toggleZoom(this)">
+        <img src="https://i.imgur.com/TZMpCQF.jpeg" alt="Imagen 1" onclick="toggleZoom(this)">
         <div class="descripcion">
-            <!-- Aquí va la descripción de la imagen 1 -->
+            <!-- REGISTRO PUBLICO DE LA CELEBRACION DE MATRIMONIO ENTRE ANTONIO ASPRÓN PILAR Y EMILIA
+              PÉREZ CAMPOS EL 17 DE MAYO DE 1927, PARA ESTA FECHA YA HABIAN NACIDO TODOS SUS HIJOS-->
             Descripción de la imagen 1.
         </div>
     </div>
@@ -100,57 +101,67 @@
     </div>
 
     <div class="imagen-contenedor">
-        <img src="https://i.imgur.com/imagen3.jpg" alt="Imagen 3" onclick="toggleZoom(this)">
+        <img src="https://i.imgur.com/5FiOQ3W.jpeg" alt="Imagen 3" onclick="toggleZoom(this)">
         <div class="descripcion">
-            <!-- Aquí va la descripción de la imagen 3 -->
+            <!-- UN CENSO REALIZADO EN SEVILLA, ESPAÑA EN 1899 DONDE ANTONIO ASPRÓN PILAR TENIA
+               29 AÑOS ESTO FUE 4 AÑOS ANTES DE QUE LLEGARA A MÉXICO A PROBAR SUERTE-->
             Descripción de la imagen 3.
         </div>
     </div>
 
     <div class="imagen-contenedor">
-        <img src="https://i.imgur.com/imagen4.jpg" alt="Imagen 4" onclick="toggleZoom(this)">
+        <img src="https://i.imgur.com/7V9YTiH.jpeg" alt="Imagen 4" onclick="toggleZoom(this)">
         <div class="descripcion">
-            <!-- Aquí va la descripción de la imagen 4 -->
+            <!-- CÉNSO DE POBLACION REALIZADO EN 1930 EN ACATLAN DE PEREZ FIGUEROA,OAX
+            DONDE APARECEN ANTONIO ASPRÓN PILAR Y EMILIA PÉREZ JUNTO A 5 DE SUS HIJOS Y SUS
+            EDADES EN ESOS MOMENTOS LA CRUZ INDICA QUE EL ÉRA EL JEFE DE FAMILIA-->
             Descripción de la imagen 4.
         </div>
     </div>
 
     <div class="imagen-contenedor">
-        <img src="https://i.imgur.com/imagen5.jpg" alt="Imagen 5" onclick="toggleZoom(this)">
+        <img src="https://i.imgur.com/6PL0pln.jpeg" alt="Imagen 5" onclick="toggleZoom(this)">
         <div class="descripcion">
-            <!-- Aquí va la descripción de la imagen 5 -->
+            <!-- PARTIDA 136 QUE DA FÉ DEL NACIMIENTO DE IGNACIO ERASMO EN 1922 EL 7TO HIJO
+            DEL MATRIMONIO, QUIEN FALLECIO EN 1922 A LOS 7 MESES DE EDAD Y DE QUIEN NO SE SABIA
+            DE SU EXISTENCIA HASTA LA INVESTIGACION DE ESTE PROYECTO-->
             Descripción de la imagen 5.
         </div>
     </div>
 
     <div class="imagen-contenedor">
-        <img src="https://i.imgur.com/imagen6.jpg" alt="Imagen 6" onclick="toggleZoom(this)">
+        <img src="https://i.imgur.com/z5CoJbT.jpeg" alt="Imagen 6" onclick="toggleZoom(this)">
         <div class="descripcion">
-            <!-- Aquí va la descripción de la imagen 6 -->
+            <!-- PARTIDA 757 (1 DE 2) DE DEFUNCION DE IGNACIO ERASMO EN 1923 -->
             Descripción de la imagen 6.
         </div>
     </div>
 
     <div class="imagen-contenedor">
-        <img src="https://i.imgur.com/imagen7.jpg" alt="Imagen 7" onclick="toggleZoom(this)">
+        <img src="https://i.imgur.com/EBoThnw.jpeg" alt="Imagen 7" onclick="toggleZoom(this)">
         <div class="descripcion">
-            <!-- Aquí va la descripción de la imagen 7 -->
+            <!-- PARTIDA 757 (2 DE 2) DE DEFUNCION DE IGNACIO ERASMO EN 1923 -->
             Descripción de la imagen 7.
         </div>
     </div>
 
     <div class="imagen-contenedor">
-        <img src="https://i.imgur.com/imagen8.jpg" alt="Imagen 8" onclick="toggleZoom(this)">
+        <img src="https://i.imgur.com/0xUhLt2.jpeg" alt="Imagen 8" onclick="toggleZoom(this)">
         <div class="descripcion">
-            <!-- Aquí va la descripción de la imagen 8 -->
+            <!-- PARTIDA DE NACIMIENTO 418 DE MARIA DE LA SOLEDAD (CHOLE) DONDE SE MENCIONAN A SUS ABUELOS
+            PATERNOS Y MATERNOS CON EL QUE SE COMPROBÓ QUE MANUEL ASPRON RUBIO Y FRANCISCA PILAR ERAN LOS PADRES
+            DEL ESPAÑOL ANTONIO ASPRÓN PILAR, LOS CUALES SURGIERON DURANTE ESTE PROYECTO PERO NO ESTABA CONFIRMADO-->
             Descripción de la imagen 8.
         </div>
     </div>
 
     <div class="imagen-contenedor">
-        <img src="https://i.imgur.com/imagen9.jpg" alt="Imagen 9" onclick="toggleZoom(this)">
+        <img src="https://i.imgur.com/N55mFUs.jpeg" alt="Imagen 9" onclick="toggleZoom(this)">
         <div class="descripcion">
-            <!-- Aquí va la descripción de la imagen 9 -->
+            <!-- FOTOGRAFIA INEDITA DE EMILIA PÉREZ CAMPOS JUNTO A 4 DE SUS HIJOS DE IZQ A DERECHA
+            DAVID APOLINAR, PEDRO, MARIA DE LA SOLEDAD Y LEOPOLDO. DE MANUEL ASPRON NO SE CONOCE
+            SU IDENTIDAD YA QUE HASTA ESTE MOMENTO NO EXISTEN FOTOS Y ANTONIO ASPRÓN PEREZ ESTUDIABA
+            Y TRABAJANA DESDE LOS 16 AÑOS EN ORIZABA, VERACRUZ. POR ESO NO APARECEN.-->
             Descripción de la imagen 9.
         </div>
     </div>
