--- a/otroescudo.html
+++ b/otroescudo.html
@@ -74,7 +74,7 @@
     <img class="imagen-matrimonio" src="https://i.imgur.com/rPswCkQ.jpeg" alt="Registro de Matrimonio" onclick="toggleZoom(this)">
 
     <!-- Botón REGRESAR -->
-    <a href="pagina-principal.html" class="boton-regresar">REGRESAR</a>
+    <a href="blason.html" class="boton-regresar">REGRESAR</a>
 
     <!-- Crédito -->
     <footer>
