--- a/masfotos.html
+++ b/masfotos.html
@@ -162,6 +162,7 @@
         <img src="https://i.imgur.com/N55mFUs.jpeg" alt="Imagen 9" onclick="toggleZoom(this)">
         <div class="descripcion">
             <!-- -->
+            FOTO RESTAURADA DE SU ORIGINAL A COLOR (LA ORIGINAL ES BLANCO Y NEGRO)
             FOTOGRAFIA INEDITA DE EMILIA PÉREZ CAMPOS JUNTO A 4 DE SUS HIJOS DE IZQ A DERECHA
             DAVID APOLINAR, PEDRO, MARIA DE LA SOLEDAD Y LEOPOLDO. 
             DE MANUEL ASPRON NO SE CONOCE SU IDENTIDAD YA QUE HASTA ESTE MOMENTO NO EXISTEN 
