--- a/arbol1.html
+++ b/arbol1.html
@@ -5,6 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Árbol Genealógico Familia Asprón</title>
     <style>
+        .menu-botones {
+        display: flex;
+        justify-content: center;
+        gap: 20px; /* Espacio entre los botones */
+        margin-top: 30px;
+    }
+
+    .menu-botones a {
+        text-decoration: none;
+        color: #ffffff;
+        font-size: 16px;
+        padding: 10px 20px; /* Espaciado interno */
+        background-color: #2c3e50;
+        border: none;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+    }
+
+    .menu-botones a:hover {
+        background-color: #1a2a3a; /* Cambia el color al pasar el mouse */
+    }
+
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
@@ -90,11 +112,14 @@
 
     <!-- Enlaces sobre los nombres -->
     <p>
+        <div class="menu-botones">
         <a class="nombre-link" href="https://i.imgur.com/Ql22QdA.png" target="_blank">VER FOTO EMILIA</a>
         
         <a class="nombre-link" href="https://i.imgur.com/GrWNNQn.jpeg" target="_blank">VER FOTO ANTONIO</a>
         <a class="nombre-link" href="masfotos.html" target="_blank">MAS FOTOS...</a>
     </p>
+    
+</div>
 
     <!-- Crédito -->
     <footer>
