--- a/david.html
+++ b/david.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2da Generación - David Apolinar Asprón Contreras</title>
+    <title>2da Generación - David Apolinar Asprón Pérez</title>
     <style>
         body {
             font-family: 'Georgia', serif; /* Fuente vintage */
@@ -63,7 +63,7 @@
 <body>
 
     <!-- Encabezado -->
-    <h1>2DA GENERACIÓN "DAVID APOLINAR ASPRÓN CONTRERAS Y ANA CONTRERAS"</h1>
+    <h1>2DA GENERACIÓN "DAVID APOLINAR ASPRÓN PÉREZ Y ANA CONTRERAS"</h1>
 
     <!-- Enlace para la imagen -->
     <div class="imagen-link">
