--- a/masfotos.html
+++ b/masfotos.html
@@ -125,8 +125,8 @@
         <img src="https://i.imgur.com/6PL0pln.jpeg" alt="Imagen 5" onclick="toggleZoom(this)">
         <div class="descripcion">
             <!-- -->
-            PARTIDA 136 QUE DA FÉ DEL NACIMIENTO DE IGNACIO ERASMO EN 1922 EL 7TO HIJO
-            DEL MATRIMONIO, QUIEN FALLECIO EN 1922 A LOS 7 MESES DE EDAD Y DE QUIEN NO
+            PARTIDA 136 QUE DA FÉ DEL NACIMIENTO DE IGNACIO ERASMO EN 1922 EL SÉPTIMO HIJO
+            DEL MATRIMONIO, QUIEN FALLECIO EN 1923 A LOS 7 MESES DE EDAD Y DE QUIEN NO
             SE SABIA DE SU EXISTENCIA HASTA LA INVESTIGACION DE ESTE PROYECTO
         </div>
     </div>
@@ -163,11 +163,11 @@
         <div class="descripcion">
             <!-- -->
             FOTO RESTAURADA DE SU ORIGINAL A COLOR (LA ORIGINAL ES BLANCO Y NEGRO)
-            FOTOGRAFIA INEDITA DE EMILIA PÉREZ CAMPOS JUNTO A 4 DE SUS HIJOS DE IZQ A DERECHA
-            DAVID APOLINAR, PEDRO, MARIA DE LA SOLEDAD Y LEOPOLDO. 
-            DE MANUEL ASPRON NO SE CONOCE SU IDENTIDAD YA QUE HASTA ESTE MOMENTO NO EXISTEN 
-            FOTOS Y ANTONIO ASPRÓN PEREZ ESTUDIABA Y TRABAJANA DESDE LOS 16 AÑOS EN ORIZABA, 
-            VERACRUZ. POR ESO NO APARECEN.
+            FOTOGRAFIA INÉDITA DE EMILIA PÉREZ CAMPOS JUNTO A 4 DE SUS HIJOS DE IZQ A DERECHA
+            DAVID APOLINAR (MI ABUELO), PEDRO, MARIA DE LA SOLEDAD Y LEOPOLDO. 
+            SOBRE MANUEL ASPRON NO SE CONOCE SU IDENTIDAD YA QUE HASTA ESTE MOMENTO NO EXISTEN 
+            FOTOS Y ANTONIO ASPRÓN PEREZ ESTUDIABA Y TRABAJABA DESDE LOS 16 AÑOS EN ORIZABA, 
+            VERACRUZ. 
         </div>
     </div>
 
