--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -118,9 +118,9 @@
             La familia <strong>Asprón</strong> creció en número y en honor, convirtiéndose en una de las más importantes de la región. El rancho de <strong>Antonio</strong> no solo fue un lugar de trabajo, sino también un hogar donde se transmitieron los valores de la familia y el amor por la tierra. Los hijos de <strong>Antonio</strong>, herederos de su legado, continuaron expandiendo el nombre de los <strong>Asprón</strong>, llevando consigo el espíritu de esfuerzo y dedicación que su padre les inculcó.
         </p>
         <p>
-            Hoy, el apellido <strong>Asprón</strong> es recordado con respeto y admiración en <strong>Acatlán de Pérez Figueroa</strong> y más allá. La historia de <strong>Antonio Asprón Pilar</strong>, el asturiano que cruzó el océano en busca de un sueño, es un testimonio de valentía, perseverancia y amor por la familia. Su legado perdura en las generaciones que llevan su sangre y en la tierra que trabajó con tanto esmero.
+            Hoy, el apellido <strong>Asprón</strong> es recordado con respeto y admiración en <strong>Acatlán de Pérez Figueroa</strong> y más allá. La historia de <strong>Antonio Asprón Pilar</strong>, el asturiano que cruzó el océano en busca de un sueño, es un testimonio de valentía, perseverancia y amor por la familia. Su legado perdura en las generaciones que llevan su sangre, en la tierra que trabajó con tanto esmero
         </p>
-        <p>... y en el corazón de quienes llevan su apellido.</p>
+        <p> y en el corazón de quienes llevan su apellido.</p>
     </div>
 
     <!-- Crédito -->
