--- a/ddavid.html
+++ b/ddavid.html
@@ -7,8 +7,9 @@
         body {
             background: #f0f0f0;
             font-family: Arial, sans-serif;
+            margin: 0;
             padding: 20px;
-            text-align: center;
+            overflow: auto; /* Permite desplazamiento */
         }
 
         /* Encabezado */
@@ -18,6 +19,7 @@
             margin-bottom: 40px;
             text-transform: uppercase;
             letter-spacing: 2px;
+            text-align: center;
         }
 
         /* Contenedor principal */
@@ -25,6 +27,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            min-width: 1200px; /* Ancho mínimo para evitar cortes */
         }
 
         /* Nodos del árbol */
@@ -112,6 +115,7 @@
             border-radius: 5px;
             font-size: 1.2em;
             transition: background 0.3s;
+            display: inline-block;
         }
 
         .button:hover {
